objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountIntegrationFormula__c</fullName>
        <formula>IF( OR( RecordType.DeveloperName = &apos;Consumer&apos; , RecordType.DeveloperName = &apos;Business&apos;), 
			TEXT( CustomerIntegrationId__c )  &amp;  TEXT( BillingIntegrationId__c )  ,  
			IF(RecordType.DeveloperName = &apos;Billing&apos;, 
						TEXT( Parent.CustomerIntegrationId__c )  &amp;  TEXT( BillingIntegrationId__c ) , 
						&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Integration Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountIntegrationId__c</fullName>
        <description>Account Integration Id (concatena 11 digitos del Customer Integration Id y 5 del Billing Integration Id)</description>
        <externalId>true</externalId>
        <inlineHelpText>Account Integration Id (concatena 11 digitos del Customer Integration Id y 5 del Billing Integration Id)</inlineHelpText>
        <label>Account Integration Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Attribute__c</fullName>
        <description>#Marketing #Sprint15 Atributo de mayor ponderación aplicado a la cuenta que se visualizará en V360.</description>
        <label>Attribute</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attributes__c</fullName>
        <description>#Sprint16 #Marketing Account segment attributes</description>
        <label>Attributes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Socio Club</fullName>
                </value>
                <value>
                    <fullName>Estratégico</fullName>
                </value>
                <value>
                    <fullName>Menor</fullName>
                </value>
                <value>
                    <fullName>Jubilado</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillingAddressStore__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingAddressStore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingIntegrationId__c</fullName>
        <label>Billing Integration Id</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Address</label>
        <referenceTo>Address2__c</referenceTo>
        <relationshipLabel>Billing Address Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Day__c</fullName>
        <description>Campo agregado para almacenar el ciclo de  facturación de la cuenta</description>
        <label>Billing Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClubMember__c</fullName>
        <defaultValue>false</defaultValue>
        <description>#MarketingTeam #Sprint08 
Defines if the account is a Club Personal member</description>
        <label>Club Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Club_SubscriptionDate__c</fullName>
        <description>Subscription Date Club Personal</description>
        <label>Club_SubscriptionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Club_SubscriptionStatus__c</fullName>
        <description>Club Personal subscription status</description>
        <label>Club_SubscriptionStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendiente</fullName>
                </value>
                <value>
                    <fullName>Confirmada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactPreferencePhone__c</fullName>
        <description>Contact Preference Phone</description>
        <inlineHelpText>Contact Preference Phone</inlineHelpText>
        <label>Contact Preference Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CreditLimit__c</fullName>
        <description>credit limit</description>
        <inlineHelpText>credit limit</inlineHelpText>
        <label>Credit Limit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreditRisk__c</fullName>
        <description>Credit Risk</description>
        <label>Credit Risk</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CuitNumber__c</fullName>
        <description>Campo para registrar el numero de Cuit</description>
        <label>CuitNumber</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CuitType__c</fullName>
        <description>Valid if cuit starts with 2 or 3</description>
        <formula>IF(  TEXT(DocumentType__c )= &apos;CUIT&apos; &amp;&amp;  BEGINS( DocumentNumber__c , &apos;3&apos;), &apos;3X&apos;, &apos;2X&apos;)</formula>
        <label>CuitType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerIntegrationId__c</fullName>
        <externalId>true</externalId>
        <label>Customer Integration Id</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Debt_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creado a partir de historia de usuario PFTA-3291 del Sprint 4 de Care</description>
        <label>Debt Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DocumentNumber__c</fullName>
        <label>DocumentNumber</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentType__c</fullName>
        <label>DocumentType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DNI</fullName>
                </value>
                <value>
                    <fullName>CUIT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dunning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mora</description>
        <label>Dunning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GP_Tabla_Temporaria__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GP Tabla Temporaria</label>
        <referenceTo>GP_Tabla_Temporaria__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HuaweiNotice_S015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HuaweiNotice S015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HuaweiNotice_S202__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HuaweiNotice S202</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_Affected_By__c</fullName>
        <label>Incidente Afecta</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type_Affected_By__c</fullName>
        <label>Tipo Incidente Afecta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet (SNM)</fullName>
                </value>
                <value>
                    <fullName>Voz (SUR)</fullName>
                </value>
                <value>
                    <fullName>Móvil (CRM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_Email_Date__c</fullName>
        <description>this field is checking the last date that the Email field was changed</description>
        <label>Last Modified Email Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicador de si la cuenta fue migrada desde legado; cuando está valuado a TRUE indica de manera inequívoca que la cuenta se migró de legado</description>
        <label>Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minor__c</fullName>
        <description>#MarketingTeam #Sprint08 
Indicates if the Age of the primary contact of the account is less than 18</description>
        <formula>vlocity_cmt__PrimaryContactId__r.vlocity_cmt__Age__c &lt; 18</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age less than 18</inlineHelpText>
        <label>Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <label>NPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>1-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>2-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>3-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>4-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>5-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>6-DETRACTORS</fullName>
                </value>
                <value>
                    <fullName>7-PASSIVES</fullName>
                </value>
                <value>
                    <fullName>8-PASSIVES</fullName>
                </value>
                <value>
                    <fullName>9-PROMOTERS</fullName>
                </value>
                <value>
                    <fullName>10-PROMOTERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonalClubCategory__c</fullName>
        <label>Personal Club Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Premium/Black</fullName>
                </value>
                <value>
                    <fullName>TRIAL</fullName>
                </value>
                <value>
                    <fullName>Classic:Premium/Black:TRIAL</fullName>
                    <isActive>false</isActive>
                    <label>Classic:Premium/Black:TRIAL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PersonalClubPoints__c</fullName>
        <label>PersonalClubPoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Número de línea decisora validado.</description>
        <label>Phone Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryContactName__c</fullName>
        <label>PrimaryContactName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Financing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Creado a partir de historia de usuario PFTA-3291 del Sprint 4 de Care</description>
        <label>Purchase Financing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Opportunities__c</fullName>
        <label>Brand Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Strengths__c</fullName>
        <label>Brand Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Threats__c</fullName>
        <label>Brand Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Brand_Weakness__c</fullName>
        <label>Brand Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Buying_Criteria_Last_Update__c</fullName>
        <label>Política de Compras Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Buying_Criteria__c</fullName>
        <label>Política de Compras</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Current_Year__c</fullName>
        <label>CSAT Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Last_Year__c</fullName>
        <label>CSAT Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Second_To_Last_Year__c</fullName>
        <label>CSAT Second To Last Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CSAT_Unit__c</fullName>
        <label>CSAT Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CUIT_Formula__c</fullName>
        <formula>IF(LEN(TEXT(SCP_Certa_GC__CUIT__c)) = 11, 
(LEFT(TEXT(SCP_Certa_GC__CUIT__c),2) + &apos;-&apos; + MID(TEXT(SCP_Certa_GC__CUIT__c), 3,8) + &apos;-&apos; + RIGHT(TEXT(SCP_Certa_GC__CUIT__c),1)),
TEXT(SCP_Certa_GC__CUIT__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CUIT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CUIT__c</fullName>
        <label>CUIT</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Categoria__c</fullName>
        <label>Categoría WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RP</fullName>
                </value>
                <value>
                    <fullName>PP</fullName>
                </value>
                <value>
                    <fullName>OP</fullName>
                </value>
                <value>
                    <fullName>DG</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>PI</fullName>
                </value>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>TT</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>FO</fullName>
                </value>
                <value>
                    <fullName>EI</fullName>
                </value>
                <value>
                    <fullName>ST</fullName>
                </value>
                <value>
                    <fullName>EO</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>PO</fullName>
                </value>
                <value>
                    <fullName>OO</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Cuenta_Para_Los_Graficos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cuenta Para Los Graficos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__DomicilioRecepcionNotificaciones__c</fullName>
        <label>Domicilio de recepción de notificaciones</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__External_Analysts_vision__c</fullName>
        <label>External Analysts vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Holding_Formula__c</fullName>
        <formula>TEXT(SCP_Certa_GC__Numero_de_Holding__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__ID_Cliente__c</fullName>
        <label>ID Cliente</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Micro_Industry__c</fullName>
        <label>Subsector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Centros Comerciales</fullName>
                </value>
                <value>
                    <fullName>Automotores y Camiones</fullName>
                </value>
                <value>
                    <fullName>Droguerías</fullName>
                </value>
                <value>
                    <fullName>Tienda Departamental</fullName>
                </value>
                <value>
                    <fullName>Otros Comercios</fullName>
                </value>
                <value>
                    <fullName>Supermercados</fullName>
                </value>
                <value>
                    <fullName>Alimentos y Bebidas</fullName>
                </value>
                <value>
                    <fullName>Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Combustibles y Lubricantes</fullName>
                </value>
                <value>
                    <fullName>Call Centers</fullName>
                </value>
                <value>
                    <fullName>Grupo Telefonica</fullName>
                </value>
                <value>
                    <fullName>Hardware Tecnológico</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Contenido Multimedia</fullName>
                </value>
                <value>
                    <fullName>Telcos e Internet</fullName>
                </value>
                <value>
                    <fullName>Banca</fullName>
                </value>
                <value>
                    <fullName>Instituciones financieras no bancarias</fullName>
                </value>
                <value>
                    <fullName>Medios de Pago</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Agro, Pesca y Forestación</fullName>
                </value>
                <value>
                    <fullName>Construccion</fullName>
                </value>
                <value>
                    <fullName>Industria Alimentos</fullName>
                </value>
                <value>
                    <fullName>Industria Automotriz y Autopartes</fullName>
                </value>
                <value>
                    <fullName>Industria Ligera y Manufacturas</fullName>
                </value>
                <value>
                    <fullName>Industria Metalurgica y Pesada</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Industria Textil y Calzado</fullName>
                </value>
                <value>
                    <fullName>Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Mineria</fullName>
                </value>
                <value>
                    <fullName>Petroleo y Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Numero_de_Cliente__c</fullName>
        <label>Numero de Cliente</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Numero_de_Holding__c</fullName>
        <label>Numero de Holding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Opportunities__c</fullName>
        <label>Other Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Strengths__c</fullName>
        <label>Other Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Threats__c</fullName>
        <label>Other Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Other_Weakness__c</fullName>
        <label>Other Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Opportunities__c</fullName>
        <label>People Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Strengths__c</fullName>
        <label>People Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Threats__c</fullName>
        <label>People Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__People_Weakness__c</fullName>
        <label>People Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PicklistSegmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Negocio Corporativo</fullName>
                </value>
                <value>
                    <fullName>Wholesale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Opportunities__c</fullName>
        <label>Products/Services Opportunities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Strengths__c</fullName>
        <label>Products/Services Strengths</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Threats__c</fullName>
        <label>Products/Services Threats</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Products_Services_Weakness__c</fullName>
        <label>Products/Services Weakness</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Razon_Social__c</fullName>
        <label>Razón Social</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region_WH__c</fullName>
        <label>Region WH</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grandes Operadores</fullName>
                </value>
                <value>
                    <fullName>Interior</fullName>
                </value>
                <value>
                    <fullName>Internacional</fullName>
                </value>
                <value>
                    <fullName>Prestadores</fullName>
                </value>
                <value>
                    <fullName>Telefonía</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Región SCP</label>
        <referenceTo>SCP_Certa_GC__Region__c</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Region_delta__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                </value>
                <value>
                    <fullName>Gobierno</fullName>
                </value>
                <value>
                    <fullName>Pymes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sector__c</fullName>
        <label>Ámbito</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Privado</fullName>
                    <default>true</default>
                    <label>Privado</label>
                </value>
                <value>
                    <fullName>Público</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Segmento_Vertical__c</fullName>
        <label>Segmento Vertical</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salud - Clínicas, Sanatorios y Hospitales</fullName>
                </value>
                <value>
                    <fullName>Gobierno Provincial</fullName>
                </value>
                <value>
                    <fullName>Asociaciones e Instituciones</fullName>
                </value>
                <value>
                    <fullName>Consultoras</fullName>
                </value>
                <value>
                    <fullName>Servicios Inmobiliarios, Empresariales y de Alquiler</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Industria Alimenticia</fullName>
                </value>
                <value>
                    <fullName>Industrias - Otro</fullName>
                </value>
                <value>
                    <fullName>Construcción</fullName>
                </value>
                <value>
                    <fullName>Gobierno Nacional</fullName>
                </value>
                <value>
                    <fullName>Salud - Medicina Prepaga</fullName>
                </value>
                <value>
                    <fullName>Seguros</fullName>
                </value>
                <value>
                    <fullName>Servicios Financieros - Banca</fullName>
                </value>
                <value>
                    <fullName>Medios de Comunicación</fullName>
                </value>
                <value>
                    <fullName>Manufactura</fullName>
                </value>
                <value>
                    <fullName>Servicios - Otro</fullName>
                </value>
                <value>
                    <fullName>Industria Química</fullName>
                </value>
                <value>
                    <fullName>Automotores - Autopartistas</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
                <value>
                    <fullName>Explotación de Minas y Canteras</fullName>
                </value>
                <value>
                    <fullName>Salud - Laboratorios</fullName>
                </value>
                <value>
                    <fullName>Petróleo</fullName>
                </value>
                <value>
                    <fullName>Agricultura, Ganadería, Caza y Silvicultura</fullName>
                </value>
                <value>
                    <fullName>Servicios Financieros</fullName>
                </value>
                <value>
                    <fullName>Siderurgia / Metalurgia</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - Energía</fullName>
                </value>
                <value>
                    <fullName>Automotores - Industria Automotriz</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Transporte</fullName>
                </value>
                <value>
                    <fullName>Prestadores Servicios Públicos - GAS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Context_Last_Update__c</fullName>
        <label>Ultima Actualización</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Context__c</fullName>
        <label>Contexto Estratégico</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Sub_region_delta__c</fullName>
        <label>Territorio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SCP_Certa_GC__Region_delta__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gobierno amba 1</fullName>
                </value>
                <value>
                    <fullName>Gobierno amba 2</fullName>
                </value>
                <value>
                    <fullName>Gobierno litoral</fullName>
                </value>
                <value>
                    <fullName>Gobierno mediterraneo</fullName>
                </value>
                <value>
                    <fullName>Industria</fullName>
                </value>
                <value>
                    <fullName>Financias</fullName>
                </value>
                <value>
                    <fullName>Servicios</fullName>
                </value>
                <value>
                    <fullName>Privado litoral</fullName>
                </value>
                <value>
                    <fullName>Privado mediterraneo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__cliente_formula__c</fullName>
        <formula>TEXT(SCP_Certa_GC__Numero_de_Cliente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numero de Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__idClienteLegado__c</fullName>
        <label>Id Cliente Legado</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSLastTryDate__c</fullName>
        <description>Sales Outbound SMS Last Try Date</description>
        <inlineHelpText>Sales Outbound SMS Last Try Date</inlineHelpText>
        <label>Sales Outbound SMS Last Try Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSLastTryNumber__c</fullName>
        <description>Sales Outbound SMS Last Try Number</description>
        <inlineHelpText>Sales Outbound SMS Last Try Number</inlineHelpText>
        <label>Sales Outbound SMS Last Try Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesOutboundSMSValidatedDate__c</fullName>
        <label>SalesOutboundSMSValidatedDate</label>
        <type>DateTime</type>
    </fields>
</CustomObject>